# rotor

./: CMakeLists.txt  changelog
conf/: CMakeLists.txt
conf/carmen/: carmen.ini
conf/example/: CMakeLists.txt  example.run.remake
conf/rotor/: broadcast.ini
conf/runner/: CMakeLists.txt  broadcast.run.remake  simplest.run
doc/: CMakeLists.txt
doc/carmen/: CMakeLists.txt  Doxyfile.remake
doc/rotor/: CMakeLists.txt  Doxyfile.remake
doc/yarp/: CMakeLists.txt
python/lib/: CMakeLists.txt
python/lib/joystick/: CMakeLists.txt  __init__.py  carmen_base.py  joystick.py  joystick_listener.py
python/lib/rotor/: CMakeLists.txt  client.py  rotorc.i  server.py
python/lib/rotor/pycommand/: __init__.py  command.py  shell.py
python/lib/rotor/types/: pose.py
python/lib/runner/: CMakeLists.txt  __init__.py  command_dialog.py  console_frontend.py  memory_info.py  selectable_text.py
rotor/: CMakeLists.txt  TODO
rotor-carmen/: CMakeLists.txt
rotor-carmen/src/: CMakeLists.txt
rotor-carmen/src/_carmen/: CarmenHandler.cpp  CarmenHandler.h  FormatString.cpp  FormatString.h
rotor-carmen/src/carmen/: CarmenRegistry.cpp  CarmenRegistry.h
rotor-drivers/: CMakeLists.txt
rotor-drivers/python/: CMakeLists.txt
rotor-drivers/python/carmen_base/: carmen_base.py
rotor-drivers/python/joystick/: joystick.py  joystick_listener.py
rotor-drivers/python/rotor/carmen_base/: carmen_base.py
rotor-drivers/python/rotor/joy2smart/: __init__.py  joy2smart.py
rotor-drivers/python/rotor/joystick/: joystick.py
rotor-drivers/sandbox/: time.py
rotor-drivers/scripts/: rotor-joy2smart  rotor-joystick
rotor-drivers/src/: CMakeLists.txt
rotor-example/cfg/: test.ini  test.run
rotor-example/runner/: test.run
rotor-example/src/: CMakeLists.txt
rotor-example/src/rotor-example/: receiver.cpp  sender.cpp
rotor-full/: CMakeLists.txt
rotor-qtrunner/: CMakeLists.txt
rotor-runner/: CMakeLists.txt
rotor-runner/python/hildon_test/: sw.py
rotor-runner/python/rotor_runner/: __init__.py  command_list.py  console_frontend.py  output_list.py
rotor-runner/python/runner/: shell_frontend.py
rotor-runner/scripts/: runner
rotor-runner/urwid-patch/: CMakeLists.txt
rotor-runner/urwid-patch/urwid/: canvas.py
rotor-urus/: CMakeLists.txt
rotor-urus/cfg/: urus.ini  urus.run
rotor-urus/src/: CMakeLists.txt
rotor-urus/src/_urus/: Conversions.cpp  Conversions.h  FormatString.cpp  FormatString.h  UrusHandler.cpp  UrusHandler.h  UrusMessageHandler.h
rotor-urus/src/urus/: UrusRegistry.cpp  UrusRegistry.h
rotor/doc/: Doxyfile.in
rotor/examples/python/simplest/: config.ini  receiver  sender
rotor/examples/python/simplest-carmen/: carmenReceiver  carmenSender
rotor/python/: CMakeLists.txt  rotor.pth
rotor/python/rotor/: __init__.py  client.py  server.py
rotor/python/runner/: console_frontend.py  runner.py
rotor/sandbox/: basictest.py  broadcast_receiver.py  broadcast_sender.py  test.cfg  timeout_exception.py
rotor/scripts/: rotor  runner
rotor/src/: CMakeLists.txt  rotorc.i
rotor/src/_rotor/: ConditionImpl.cpp  MutexImpl.cpp  OptionParser.cpp  OptionParser.h  StructureBase.cpp  StructureParserImpl.cpp  StructureParserImpl.h  ThreadImpl.cpp  ThreadImpl.h
rotor/src/broadcast/: BroadcastRegistry.cpp  BroadcastRegistry.h
rotor/src/carmen/: CarmenRegistry.cpp  CarmenRegistry.h
rotor/src/rotor/: AbstractVariable.cpp  AbstractVariableOperators.h  Array.tpp  BaseOptions.cpp  BaseOptions.h  BaseRegistry.cpp  BaseRegistry.h  BasicTypes.cpp  BasicTypes.h  CoreMessages.h  Debug.cpp  Debug.h  DefaultQueueReleaser.tpp  DispatcherModule.h  Exceptions.cpp  Exceptions.h  FileUtils.cpp  InputDispatcherModule.cpp  InputDispatcherModule.h  LightweightStructure.cpp  LightweightStructure.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h  Message.cpp  Message.h  Module.h  NetUtils.cpp  NullDeleter.cpp  OperatorMacros.h  Options.cpp  Options.h  Queue.h  Queue.tpp  QueueHandler.cpp  QueueHandler.h  QueuePolicy.h  Registry.cpp  Registry.h  (+16 more)
rotor/src/sandbox/: broadcastSerialization.cpp  laser_receiver.cpp  structurePerformance.cpp
rotor/src/test/: TestArray.cpp  TestBroadcastSerialization.cpp  TestOptionParser.cpp  TestQueue.cpp  TestRegistry.cpp  TestStructure.cpp  TestStructureArray.cpp  TestStructureParser.cpp  TestVariable.cpp  main.cpp
rotor/testcfg/: swissranger.parameters
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/broadcast/: BroadcastRegistry.cpp  CMakeLists.txt
src/lib/carmen/: CMakeLists.txt  CarmenHandler.cpp  CarmenHandler.ipp  CarmenRegistry.cpp  CarmenRegistry.h  FormatString.cpp
src/lib/qtrunner/: qtrunner.ui
src/lib/rotor/: AbstractVariable.h  AbstractVariableOperators.h  Array.h  Array.tpp  BaseOptions.cpp  BaseRegistry.cpp  BaseRegistry.h  CMakeLists.txt  Condition.cpp  Condition.h  ConditionImpl.cpp  ConditionImpl.ipp  Config.h.remake  Conversion.h  CoreMessages.h  DebugModule.cpp  DebugModule.h  DefaultModule.cpp  DefaultModule.h  DefaultQueueReleaser.h  DispatcherModule.cpp  FileUtils.h  Lock.cpp  Lock.h  Logger.cpp  MemberDefinition.cpp  MemberDefinition.h  Memory.cpp  Message.h  Module.cpp  Module.h  ModuleRunner.cpp  ModuleRunner.h  Mutex.cpp  Mutex.h  MutexImpl.cpp  MutexImpl.ipp  NetUtils.cpp  NetUtils.h  NullDeleter.h  (+28 more)
src/lib/yarp/: CMakeLists.txt  Conversions.cpp  Conversions.ipp  YarpHandler.ipp  YarpRegistry.cpp  YarpRegistry.h
